[gd_scene load_steps=2 format=3 uid="uid://bixsmx2mhvyyx"]

[ext_resource type="Script" uid="uid://c4x21hwwd33mk" path="res://UI/SessionPopUp/session_pop_up.gd" id="1_l0gqt"]

[node name="SessionPopUp" type="CenterContainer"]
process_mode = 3
script = ExtResource("1_l0gqt")

[node name="PanelContainer" type="PanelContainer" parent="."]
self_modulate = Color(0.442911, 0.442911, 0.442911, 1)
layout_mode = 2

[node name="MarginContainer" type="MarginContainer" parent="PanelContainer"]
layout_mode = 2
theme_override_constants/margin_left = 20
theme_override_constants/margin_top = 20
theme_override_constants/margin_right = 20
theme_override_constants/margin_bottom = 20

[node name="VBoxContainer" type="VBoxContainer" parent="PanelContainer/MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 12

[node name="Label3" type="Label" parent="PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 22
text = "Session Recorder"
horizontal_alignment = 1

[node name="PlayerName" type="HBoxContainer" parent="PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="PanelContainer/MarginContainer/VBoxContainer/PlayerName"]
layout_mode = 2
text = "Player Name: "

[node name="TextEdit" type="TextEdit" parent="PanelContainer/MarginContainer/VBoxContainer/PlayerName"]
custom_minimum_size = Vector2(0, 30)
layout_mode = 2
size_flags_horizontal = 3
placeholder_text = "Player1"

[node name="Label" type="Label" parent="PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Please provide a directory to save your session to."
horizontal_alignment = 1

[node name="Directory" type="HBoxContainer" parent="PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="PanelContainer/MarginContainer/VBoxContainer/Directory"]
layout_mode = 2
text = "Directory: "

[node name="TextEdit" type="TextEdit" parent="PanelContainer/MarginContainer/VBoxContainer/Directory"]
custom_minimum_size = Vector2(0, 30)
layout_mode = 2
size_flags_horizontal = 3

[node name="Buttons" type="HBoxContainer" parent="PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 34
alignment = 1

[node name="OKButton" type="Button" parent="PanelContainer/MarginContainer/VBoxContainer/Buttons"]
layout_mode = 2
text = "OK"

[node name="CancelButton" type="Button" parent="PanelContainer/MarginContainer/VBoxContainer/Buttons"]
layout_mode = 2
text = "Cancel"

[node name="Label2" type="Label" parent="PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
horizontal_alignment = 1

[connection signal="pressed" from="PanelContainer/MarginContainer/VBoxContainer/Buttons/OKButton" to="." method="_on_ok_button_pressed"]
[connection signal="pressed" from="PanelContainer/MarginContainer/VBoxContainer/Buttons/CancelButton" to="." method="close"]
